# cc_professional

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/advanced_templates/: CMakeLists.txt
src/advanced_templates/src/: trait.cc
src/common/: CMakeLists.txt
src/common/include/: log.hh
src/common/src/: log.cc
src/function/: CMakeLists.txt
src/function/src/: func_operator.cc  func_point.cc  function.cc
src/io/: CMakeLists.txt
src/io/src/: sstream.cc
src/string_stringview/: CMakeLists.txt
src/string_stringview/src/: c_str.cc  convert_string_number.cc  string.cc  string_format.cc  string_literial.cc  string_view.cc
src/string_stringview/tests/: CMakeLists.txt  format_variant.cc
src/utils/: CMakeLists.txt
src/utils/src/: any.cc  variant.cc
tests/: CMakeLists.txt  test_any.cc
